# zkshare

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml  env.example
backend/src/: main.rs
backend/src/handlers/: token.rs
backend/src/middleware/: rate_limit.rs
backend/src/models/: token.rs
frontend/: .end  env.example  index.css  index.html  package-lock.json  test-crypto.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AccessPassword.tsx  CreatePassword.tsx  ErrorBoundary.tsx  ShareLink.tsx
frontend/src/crypto/: encryption.ts  keyDerivation.ts
frontend/src/services/: api.ts
website/: DEPLOYMENT.md  README.md  index.html  package.json
zkdotenv/: test_zkcloud_decrypt.py  test_zkcloud_encrypt.py  zkcloud.py
zkdotenv/others/: zkdotenvc.py
zkdotenv/tests/: test_invalid_pin.py  test_no_pin.py  test_pin_retry.py  test_single_use.py  test_zkcloud_decrypt.py  test_zkcloud_encrypt.py  zkdotenv.py
